--- a/extracting_meta_features.ipynb
+++ b/extracting_meta_features.ipynb
@@ -93,11 +93,11 @@
     "    if not recommender_eval_path is None:\n",
     "        recommender_evaluation_table.to_csv(recommender_eval_path)\n",
     "    \n",
-    "    # not_agg_evaluation_table = not_agg_evaluation_table.copy(deep=True)\n",
-    "    # not_agg_evaluation_table.sort_values(by=['quantifier', 'dataset'], inplace=True)\n",
-    "    # not_agg_evaluation_table.reset_index(drop=True, inplace=True)\n",
+    "    not_agg_evaluation_table = not_aggregated_evaluation_table.copy(deep=True)\n",
+    "    not_agg_evaluation_table.sort_values(by=['quantifier', 'dataset'], inplace=True)\n",
+    "    not_agg_evaluation_table.reset_index(drop=True, inplace=True)\n",
     "    \n",
-    "    return recommender_evaluation_table#, not_agg_evaluation_table\n"
+    "    return recommender_evaluation_table, not_agg_evaluation_table\n"
    ]
   },
   {
@@ -108,6 +108,7 @@
    "outputs": [],
    "source": [
     "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from ensemble_quantifier import EnsembleQuantifier\n",
     "\n",
     "model = KNeighborsRegressor()\n",
     "\n",
@@ -116,7 +117,13 @@
     "not_aggregated_evaluation_table = reg_quantifiers_eval\n",
     "\n",
     "model_dict = fit_regressor(model=model, meta_features_table=meta_features_table, not_aggregated_evaluation_table=not_aggregated_evaluation_table, evaluation_table=evaluation_table)\n",
-    "_ = loo_reg(model_dict, meta_features_table, not_aggregated_evaluation_table, evaluation_table, RESULTS_DIR + \"neigh_regressor_recommendation_eval.csv\")"
+    "REG_KNN_recommender_eval, REG_KNN_quantifiers_eval = loo_reg(model_dict, meta_features_table, not_aggregated_evaluation_table, evaluation_table, RESULTS_DIR + \"neigh_regressor_recommendation_eval.csv\")\n",
+    "\n",
+    "REG_KNN_recommender_eval.to_csv(f\"./plot_data/experiment-1/final_results/neigh_reg/neigh_reg_recommender_eval.csv\")\n",
+    "REG_KNN_quantifiers_eval.to_csv(f\"./plot_data/experiment-1/final_results/neigh_reg/neigh_reg_quantifiers_eval.csv\")\n",
+    "\n",
+    "# ensemble_qtf = EnsembleQuantifier()\n",
+    "# ensemble_qtf.evaluation(\"regression\", REG_KNN_recommender_eval, REG_KNN_quantifiers_eval, f\"./plot_data/experiment-1/final_results/neigh_reg/reg_ensemble_quantifier_evaluation_table_KNN.csv\")"
    ]
   },
   {
@@ -128,7 +135,6 @@
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
-    "\n",
     "model=RandomForestRegressor(n_jobs=-1)\n",
     "\n",
     "meta_features_table = meta_features\n",
@@ -136,7 +142,13 @@
     "not_aggregated_evaluation_table = reg_quantifiers_eval\n",
     "\n",
     "model_dict = fit_regressor(model=model, meta_features_table=meta_features_table, not_aggregated_evaluation_table=not_aggregated_evaluation_table, evaluation_table=evaluation_table)\n",
-    "_,_ = loo_reg(model_dict, meta_features_table, not_aggregated_evaluation_table, evaluation_table, RESULTS_DIR + \"rf_regressor_recommendation_eval.csv\")"
+    "REG_RF_recommender_eval, REG_RF_quantifiers_eval = loo_reg(model_dict, meta_features_table, not_aggregated_evaluation_table, evaluation_table, RESULTS_DIR + \"rf_regressor_recommendation_eval.csv\")\n",
+    "\n",
+    "REG_RF_recommender_eval.to_csv(f\"./plot_data/experiment-1/final_results/rf_reg/rf_reg_recommender_eval.csv\")\n",
+    "REG_RF_quantifiers_eval.to_csv(f\"./plot_data/experiment-1/final_results/rf_reg/rf_reg_quantifiers_eval.csv\")\n",
+    "\n",
+    "# ensemble_qtf = EnsembleQuantifier()\n",
+    "# ensemble_qtf.evaluation(\"regression\", REG_RF_recommender_eval, REG_RF_quantifiers_eval, f\"./plot_data/experiment-1/final_results/rf_reg/reg_ensemble_quantifier_evaluation_table_RF.csv\")"
    ]
   },
   {
@@ -155,7 +167,13 @@
     "not_aggregated_evaluation_table = reg_quantifiers_eval\n",
     "\n",
     "model_dict = fit_regressor(model=model, meta_features_table=meta_features_table, not_aggregated_evaluation_table=not_aggregated_evaluation_table, evaluation_table=evaluation_table)\n",
-    "_,_ = loo_reg(model_dict, meta_features_table, not_aggregated_evaluation_table, evaluation_table, RESULTS_DIR + \"xgbr_regressor_recommendation_eval.csv\")"
+    "REG_XGBR_recommender_eval, REG_XGBR_quantifiers_eval = loo_reg(model_dict, meta_features_table, not_aggregated_evaluation_table, evaluation_table, RESULTS_DIR + \"xgbr_regressor_recommendation_eval.csv\")\n",
+    "\n",
+    "REG_XGBR_recommender_eval.to_csv(f\"./plot_data/experiment-1/final_results/xgbr_reg/xgbr_reg_recommender_eval.csv\")\n",
+    "REG_XGBR_quantifiers_eval.to_csv(f\"./plot_data/experiment-1/final_results/xgbr_reg/xgbr_reg_quantifiers_eval.csv\")\n",
+    "\n",
+    "# ensemble_qtf = EnsembleQuantifier()\n",
+    "# ensemble_qtf.evaluation(\"regression\", REG_XGBR_recommender_eval, REG_XGBR_quantifiers_eval, f\"./plot_data/experiment-1/final_results/xgbr_reg/reg_ensemble_quantifier_evaluation_table_XGBR.csv\")"
    ]
   },
   {
@@ -174,7 +192,50 @@
     "not_aggregated_evaluation_table = reg_quantifiers_eval\n",
     "\n",
     "model_dict = fit_regressor(model=model, meta_features_table=meta_features_table, not_aggregated_evaluation_table=not_aggregated_evaluation_table, evaluation_table=evaluation_table)\n",
-    "_,_ = loo_reg(model_dict, meta_features_table, not_aggregated_evaluation_table, evaluation_table, RESULTS_DIR + \"svr_regressor_recommendation_eval.csv\")"
+    "REG_SVR_recommender_eval, REG_SVR_quantifiers_eval = loo_reg(model_dict, meta_features_table, not_aggregated_evaluation_table, evaluation_table, RESULTS_DIR + \"svr_regressor_recommendation_eval.csv\")\n",
+    "\n",
+    "REG_SVR_recommender_eval.to_csv(f\"./plot_data/experiment-1/final_results/svr_reg/svr_reg_recommender_eval.csv\")\n",
+    "REG_SVR_quantifiers_eval.to_csv(f\"./plot_data/experiment-1/final_results/svr_reg/svr_reg_quantifiers_eval.csv\")\n",
+    "\n",
+    "# ensemble_qtf = EnsembleQuantifier()\n",
+    "# ensemble_qtf.evaluation(\"regression\", REG_SVR_recommender_eval, REG_SVR_quantifiers_eval, f\"./plot_data/experiment-1/final_results/svr_reg/reg_ensemble_quantifier_evaluation_table_SVR.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce7d0ccf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from ensemble_quantifier import EnsembleQuantifier\n",
+    "\n",
+    "## REGRESSORES\n",
+    "\n",
+    "# KNN\n",
+    "REG_KNN_recommender_eval = pd.read_csv(f\"./plot_data/experiment-1/final_results/neigh_reg/neigh_reg_recommender_eval.csv\")\n",
+    "REG_KNN_quantifiers_eval = pd.read_csv(f\"./plot_data/experiment-1/final_results/neigh_reg/neigh_reg_quantifiers_eval.csv\")\n",
+    "ensemble_qtf = EnsembleQuantifier()\n",
+    "ensemble_qtf.evaluation(\"regression\", REG_KNN_recommender_eval, REG_KNN_quantifiers_eval, f\"./plot_data/experiment-1/final_results/neigh_reg/reg_ensemble_quantifier_evaluation_table_KNN.csv\")\n",
+    "\n",
+    "# RF\n",
+    "REG_RF_recommender_eval = pd.read_csv(f\"./plot_data/experiment-1/final_results/rf_reg/rf_reg_recommender_eval.csv\")\n",
+    "REG_RF_quantifiers_eval = pd.read_csv(f\"./plot_data/experiment-1/final_results/rf_reg/rf_reg_quantifiers_eval.csv\")\n",
+    "ensemble_qtf = EnsembleQuantifier()\n",
+    "ensemble_qtf.evaluation(\"regression\", REG_RF_recommender_eval, REG_RF_quantifiers_eval, f\"./plot_data/experiment-1/final_results/rf_reg/reg_ensemble_quantifier_evaluation_table_RF.csv\")\n",
+    "\n",
+    "# XGBOOST\n",
+    "REG_XGBR_recommender_eval = pd.read_csv(f\"./plot_data/experiment-1/final_results/xgbr_reg/xgbr_reg_recommender_eval.csv\")\n",
+    "REG_XGBR_quantifiers_eval = pd.read_csv(f\"./plot_data/experiment-1/final_results/xgbr_reg/xgbr_reg_quantifiers_eval.csv\")\n",
+    "ensemble_qtf = EnsembleQuantifier()\n",
+    "ensemble_qtf.evaluation(\"regression\", REG_XGBR_recommender_eval, REG_XGBR_quantifiers_eval, f\"./plot_data/experiment-1/final_results/xgbr_reg/reg_ensemble_quantifier_evaluation_table_XGBR.csv\")\n",
+    "\n",
+    "# SVR\n",
+    "REG_SVR_recommender_eval = pd.read_csv(f\"./plot_data/experiment-1/final_results/svr_reg/svr_reg_recommender_eval.csv\")\n",
+    "REG_SVR_quantifiers_eval = pd.read_csv(f\"./plot_data/experiment-1/final_results/svr_reg/svr_reg_quantifiers_eval.csv\")\n",
+    "ensemble_qtf = EnsembleQuantifier()\n",
+    "ensemble_qtf.evaluation(\"regression\", REG_SVR_recommender_eval, REG_SVR_quantifiers_eval, f\"./plot_data/experiment-1/final_results/svr_reg/reg_ensemble_quantifier_evaluation_table_SVR.csv\")"
    ]
   }
  ],
