--- a/extracting_meta_features.ipynb
+++ b/extracting_meta_features.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "c8c6c3ce",
+   "metadata": {},
+   "source": [
+    "# Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "33ea7b58",
    "metadata": {},
    "outputs": [],
@@ -21,12 +29,22 @@
     "knn_quantifiers_eval = pd.read_csv(ROOT_DIR + 'knn_quantifiers_evaluation_table.csv', index_col=0)\n",
     "\n",
     "reg_quantifiers_eval_agg = pd.read_csv(ROOT_DIR + 'reg_quantifiers_evaluation_table_agg.csv', index_col=[0,1])\n",
-    "knn_quantifiers_eval_agg = pd.read_csv(ROOT_DIR + 'knn_quantifiers_evaluation_table_agg.csv', index_col=[0,1])"
+    "knn_quantifiers_eval_agg = pd.read_csv(ROOT_DIR + 'knn_quantifiers_evaluation_table_agg.csv', index_col=[0,1])\n",
+    "\n",
+    "arr_table = pd.read_csv(ROOT_DIR + 'arr_table.csv', index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "edec90bd",
+   "metadata": {},
+   "source": [
+    "# Util"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "b8f3f420",
    "metadata": {},
    "outputs": [],
@@ -98,6 +116,215 @@
     "    not_agg_evaluation_table.reset_index(drop=True, inplace=True)\n",
     "    \n",
     "    return recommender_evaluation_table, not_agg_evaluation_table\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "00f2266c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "\n",
+    "def fit_knn(model, meta_features_table, not_aggregated_evaluation_table, evaluation_table):\n",
+    "    meta_features_table = meta_features_table\n",
+    "    not_agg_evaluation_table = not_aggregated_evaluation_table\n",
+    "    evaluation_table = evaluation_table\n",
+    "    \n",
+    "    eval_table = evaluation_table.reset_index()\n",
+    "    dt_list = eval_table['dataset'].unique().tolist()\n",
+    "    qtf_list = eval_table['quantifier'].unique().tolist()\n",
+    "    arr_table = pd.DataFrame(columns=qtf_list)\n",
+    "    alpha = 0\n",
+    "    m = len(qtf_list) - 1\n",
+    "    for dt in dt_list:\n",
+    "        rows_by_dataset = eval_table[eval_table['dataset'] == dt]\n",
+    "        arr_row = []\n",
+    "        for qtf in qtf_list:\n",
+    "            acc_i = np.array(rows_by_dataset[rows_by_dataset['quantifier'] == qtf]['inv_abs_error'].values)\n",
+    "            acc_j = np.array(rows_by_dataset[rows_by_dataset['quantifier'] != qtf]['inv_abs_error'].values)\n",
+    "\n",
+    "            run_time_i = np.array(rows_by_dataset[rows_by_dataset['quantifier'] == qtf]['run_time'].values)\n",
+    "            run_time_j = np.array(rows_by_dataset[rows_by_dataset['quantifier'] != qtf]['run_time'].values)\n",
+    "\n",
+    "            acc_i_div_j = acc_i / acc_j\n",
+    "            run_time_i_div_j = 1 + (alpha * np.log10(run_time_i / run_time_j))\n",
+    "            arr_i = np.sum(acc_i_div_j / run_time_i_div_j) / m\n",
+    "\n",
+    "            arr_row.append(arr_i)\n",
+    "        arr_table.loc[dt] = arr_row\n",
+    "\n",
+    "    data = meta_features_table.values\n",
+    "    model.fit(data) # NearestNeighbors(n_neighbors=n_neighbors, metric='manhattan', n_jobs=-1)\n",
+    "\n",
+    "    return model, arr_table\n",
+    "\n",
+    "\n",
+    "\n",
+    "def loo_knn(model, arr_table, meta_features_table, not_aggregated_evaluation_table, evaluation_table,  recommender_eval_path: str = None):\n",
+    "    # predicted_arr_table = pd.DataFrame(columns=self.arr_table.columns, index=self.arr_table.index.tolist())\n",
+    "    # true_arr_table = pd.DataFrame(columns=self.arr_table.columns, index=self.arr_table.index.tolist())\n",
+    "\n",
+    "    recommender_evaluation_table = pd.DataFrame(columns=[\"predicted_ranking\",\n",
+    "                                                            \"predicted_ranking_weights\",\n",
+    "                                                            \"predicted_ranking_arr\",\n",
+    "                                                            \"true_ranking\",\n",
+    "                                                            \"true_ranking_weights\",\n",
+    "                                                            \"true_ranking_arr\"], index=arr_table.index.tolist())\n",
+    "    transform_pipeline_ = MinMaxScaler() # clone(self.transform_pipeline)\n",
+    "    recommender_ = clone(model)\n",
+    "    for dataset in arr_table.index.tolist():\n",
+    "        X_test = meta_features_table.loc[dataset].values\n",
+    "        X_test = np.array(X_test).reshape(1, -1)\n",
+    "        y_test = arr_table.loc[dataset].values\n",
+    "\n",
+    "        X_train = meta_features_table.drop(index=dataset).values\n",
+    "        y_train = (arr_table.drop(index=dataset)).values\n",
+    "\n",
+    "        transform_pipeline_.fit(X_train)\n",
+    "        transformed_train = transform_pipeline_.transform(X_train)\n",
+    "        recommender_.fit(transformed_train, y_train)\n",
+    "\n",
+    "        transformed_test = transform_pipeline_.transform(X_test)\n",
+    "        distances, indices = recommender_.kneighbors(transformed_test)\n",
+    "        distances, indices = distances[0], indices[0]\n",
+    "        quantifiers = arr_table.columns\n",
+    "        new_arr_array = np.array(len(quantifiers) * [np.float64(0)])\n",
+    "        tolerance = 1e-10\n",
+    "        weights = np.array(1/(distances + tolerance)) / np.sum(1/(distances + tolerance))\n",
+    "        for idx, w in zip(indices, weights):\n",
+    "            arr_idx = meta_features_table.iloc[idx].name\n",
+    "            new_arr_array += np.array(arr_table.loc[arr_idx].values) * w\n",
+    "\n",
+    "        quantifier_arr_pairs = sorted(list(zip(quantifiers, new_arr_array)), key=lambda x: x[1], reverse=True)\n",
+    "        predicted_ranking, predicted_arr = zip(*quantifier_arr_pairs)\n",
+    "        predicted_ranking_weights = np.array(predicted_arr) / np.sum(predicted_arr)\n",
+    "\n",
+    "        quantifier_arr_pairs = sorted(list(zip(quantifiers, y_test)), key=lambda x: x[1], reverse=True)\n",
+    "        true_ranking, true_arr = zip(*quantifier_arr_pairs)\n",
+    "        true_ranking_weights = np.array(true_arr) / np.sum(true_arr)\n",
+    "\n",
+    "        recommender_evaluation_table.loc[dataset] = [predicted_ranking, predicted_ranking_weights, predicted_arr,\n",
+    "                                                        true_ranking, true_ranking_weights, true_arr]\n",
+    "        \n",
+    "    if not recommender_eval_path is None:\n",
+    "        recommender_evaluation_table.to_csv(recommender_eval_path)\n",
+    "        \n",
+    "    not_agg_evaluation_table = not_aggregated_evaluation_table.copy(deep=True)\n",
+    "    not_agg_evaluation_table.sort_values(by=['quantifier', 'dataset'], inplace=True)\n",
+    "    not_agg_evaluation_table.reset_index(drop=True, inplace=True)\n",
+    "    \n",
+    "    return recommender_evaluation_table, not_agg_evaluation_table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbb319be",
+   "metadata": {},
+   "source": [
+    "# KNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfcd6448",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import NearestNeighbors\n",
+    "from ensemble_quantifier import EnsembleQuantifier\n",
+    "\n",
+    "model = NearestNeighbors(n_neighbors=1, metric='manhattan', n_jobs=-1)\n",
+    "\n",
+    "meta_features_table = meta_features\n",
+    "evaluation_table = knn_quantifiers_eval_agg\n",
+    "not_aggregated_evaluation_table = knn_quantifiers_eval\n",
+    "\n",
+    "knn, arr_table = fit_knn(model, meta_features_table, not_aggregated_evaluation_table, evaluation_table)\n",
+    "\n",
+    "knn_recommender_eval, knn_quantifiers_eval = loo_knn(knn, arr_table, meta_features_table, not_aggregated_evaluation_table, evaluation_table, RESULTS_DIR + \"knn_1_recommendation_eval.csv\")\n",
+    "ensemble_qtf = EnsembleQuantifier()\n",
+    "ensemble_qtf.evaluation(\"knn\", knn_recommender_eval, knn_quantifiers_eval, f\"./plot_data/experiment-1/results/knn_1/knn_1_ensemble_quantifier_evaluation_table.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ba5960c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import NearestNeighbors\n",
+    "from ensemble_quantifier import EnsembleQuantifier\n",
+    "\n",
+    "model = NearestNeighbors(n_neighbors=3, metric='manhattan', n_jobs=-1)\n",
+    "\n",
+    "meta_features_table = meta_features\n",
+    "evaluation_table = knn_quantifiers_eval_agg\n",
+    "not_aggregated_evaluation_table = knn_quantifiers_eval\n",
+    "\n",
+    "knn, arr_table = fit_knn(model, meta_features_table, not_aggregated_evaluation_table, evaluation_table)\n",
+    "\n",
+    "knn_recommender_eval, knn_quantifiers_eval = loo_knn(knn, arr_table, meta_features_table, not_aggregated_evaluation_table, evaluation_table, RESULTS_DIR + \"knn_3_recommendation_eval.csv\")\n",
+    "# ensemble_qtf = EnsembleQuantifier()\n",
+    "# ensemble_qtf.evaluation(\"knn\", knn_recommender_eval, knn_quantifiers_eval, f\"./plot_data/experiment-1/results/knn_3/knn_3_ensemble_quantifier_evaluation_table.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3c51e89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import NearestNeighbors\n",
+    "from ensemble_quantifier import EnsembleQuantifier\n",
+    "\n",
+    "model = NearestNeighbors(n_neighbors=5, metric='manhattan', n_jobs=-1)\n",
+    "\n",
+    "meta_features_table = meta_features\n",
+    "evaluation_table = knn_quantifiers_eval_agg\n",
+    "not_aggregated_evaluation_table = knn_quantifiers_eval\n",
+    "\n",
+    "knn, arr_table = fit_knn(model, meta_features_table, not_aggregated_evaluation_table, evaluation_table)\n",
+    "\n",
+    "knn_recommender_eval, knn_quantifiers_eval = loo_knn(knn, arr_table, meta_features_table, not_aggregated_evaluation_table, evaluation_table, RESULTS_DIR + \"knn_5_recommendation_eval.csv\")\n",
+    "# ensemble_qtf = EnsembleQuantifier()\n",
+    "# ensemble_qtf.evaluation(\"knn\", knn_recommender_eval, knn_quantifiers_eval, f\"./plot_data/experiment-1/results/knn_5/knn_5_ensemble_quantifier_evaluation_table.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "998c46e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import NearestNeighbors\n",
+    "from ensemble_quantifier import EnsembleQuantifier\n",
+    "\n",
+    "model = NearestNeighbors(n_neighbors=7, metric='manhattan', n_jobs=-1)\n",
+    "\n",
+    "meta_features_table = meta_features\n",
+    "evaluation_table = knn_quantifiers_eval_agg\n",
+    "not_aggregated_evaluation_table = knn_quantifiers_eval\n",
+    "\n",
+    "knn, arr_table = fit_knn(model, meta_features_table, not_aggregated_evaluation_table, evaluation_table)\n",
+    "\n",
+    "knn_recommender_eval, knn_quantifiers_eval = loo_knn(knn, arr_table, meta_features_table, not_aggregated_evaluation_table, evaluation_table, RESULTS_DIR + \"knn_7_recommendation_eval.csv\")\n",
+    "# ensemble_qtf = EnsembleQuantifier()\n",
+    "# ensemble_qtf.evaluation(\"knn\", knn_recommender_eval, knn_quantifiers_eval, f\"./plot_data/experiment-1/results/knn_7/knn_7_ensemble_quantifier_evaluation_table.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a50d9457",
+   "metadata": {},
+   "source": [
+    "# Regressors"
    ]
   },
   {
