running all regressors

--- a/extracting_meta_features.ipynb
+++ b/extracting_meta_features.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "33ea7b58",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b8f3f420",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "00f2266c",
    "metadata": {},
    "outputs": [],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "bfcd6448",
    "metadata": {},
    "outputs": [],
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2ba5960c",
    "metadata": {},
    "outputs": [],
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d3c51e89",
    "metadata": {},
    "outputs": [],
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "998c46e8",
    "metadata": {},
    "outputs": [],
@@ -330,10 +330,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "fa34d2a2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished 1043_ada_agnostic\n",
+      "Finished 1460_banana\n",
+      "Finished 1462_banknote-authentication\n",
+      "Finished 1466_cardiotocography\n",
+      "Finished 1475_first-order-theorem-proving\n",
+      "Finished 1479_hill-valley\n",
+      "Finished 1485_madelon\n",
+      "Finished 1489_phoneme\n",
+      "Finished 1494_qsar-biodeg\n",
+      "Finished 1496_ringnorm\n",
+      "Finished 1497_wall-robot-navigation\n",
+      "Finished 1504_steel-plates-fault\n",
+      "Finished 1507_twonorm\n",
+      "Finished 1526_wall-robot-navigation\n",
+      "Finished 1535_volcanoes-b5\n",
+      "Finished 1538_volcanoes-d1\n",
+      "Finished 1539_volcanoes-d2\n",
+      "Finished 1540_volcanoes-d3\n",
+      "Finished 1541_volcanoes-d4\n",
+      "Finished 1566_hill-valley\n",
+      "Finished 182_satimage\n",
+      "Finished 23_cmc\n",
+      "Finished 28_optdigits\n",
+      "Finished 294_satellite_image\n",
+      "Finished 2dplanes\n",
+      "Finished 30_page-blocks\n",
+      "Finished 312_scene\n",
+      "Finished 375_JapaneseVowels\n",
+      "Finished 40474_thyroid-allbp\n",
+      "Finished 40475_thyroid-allhyper\n",
+      "Finished 40733_yeast\n",
+      "Finished 44_spambase\n",
+      "Finished 4538_GesturePhaseSegmentationProcessed\n",
+      "Finished 60_waveform-5000\n",
+      "Finished 679_rmftsa_sleepdata\n",
+      "Finished AedesQuinx\n",
+      "Finished AedesSex\n",
+      "Finished ArabicDigit\n",
+      "Finished BNG\n",
+      "Finished BNG_breast-w\n",
+      "Finished GAMETES_Epistasis_2-Way_20atts_0.1H_EDM-1_1\n",
+      "Finished GAMETES_Epistasis_2-Way_20atts_0.4H_EDM-1_1\n",
+      "Finished HTRU\n",
+      "Finished MagicTelescope\n",
+      "Finished abalone\n",
+      "Finished ailerons\n",
+      "Finished anuranCalls\n",
+      "Finished balloon\n",
+      "Finished bank8FM\n",
+      "Finished churn\n",
+      "Finished clean2\n",
+      "Finished click-prediction\n",
+      "Finished cmc\n",
+      "Finished covtype_reduced\n",
+      "Finished cpu_act\n",
+      "Finished default_credit_card_clients\n",
+      "Finished delta_ailerons\n",
+      "Finished eeg\n",
+      "Finished electricity-normalized\n",
+      "Finished elevators\n",
+      "Finished file22f0e4a679\n",
+      "Finished file79b563a1a18\n",
+      "Finished file7b5365fa741c\n",
+      "Finished fri_c2_1000_10\n",
+      "Finished fried\n",
+      "Finished gina_agnostic\n",
+      "Finished houses\n",
+      "Finished jm1-processed\n",
+      "Finished kdd_JapaneseVowels\n",
+      "Finished kin8nm\n",
+      "Finished letter-recognition\n",
+      "Finished magic\n",
+      "Finished mozilla\n",
+      "Finished namao\n",
+      "Finished occupancy\n",
+      "Finished page-blocks\n",
+      "Finished parity5_plus_5\n",
+      "Finished pendigits\n",
+      "Finished phoneme\n",
+      "Finished php50jXam\n",
+      "Finished phpGUrE90\n",
+      "Finished phpMD2hR6\n",
+      "Finished phpV5QYya\n",
+      "Finished phpWfYmlu\n",
+      "Finished phphQEck0\n",
+      "Finished phplE7q6h\n",
+      "Finished phpmPOD5A\n",
+      "Finished phpwRjVjk\n",
+      "Finished phpxijhaP\n",
+      "Finished pol\n",
+      "Finished pollen\n",
+      "Finished puma32H\n",
+      "Finished puma8NH\n",
+      "Finished quake\n",
+      "Finished space_ga\n",
+      "Finished spambase\n",
+      "Finished sylva_prior\n",
+      "Finished visualizing_soil\n",
+      "Finished wind\n",
+      "Finished winetype\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    from sklearn.neighbors import KNeighborsRegressor\n",
@@ -359,10 +466,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "cf3c8f75",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished 1043_ada_agnostic\n",
+      "Finished 1460_banana\n",
+      "Finished 1462_banknote-authentication\n",
+      "Finished 1466_cardiotocography\n",
+      "Finished 1475_first-order-theorem-proving\n",
+      "Finished 1479_hill-valley\n",
+      "Finished 1485_madelon\n",
+      "Finished 1489_phoneme\n",
+      "Finished 1494_qsar-biodeg\n",
+      "Finished 1496_ringnorm\n",
+      "Finished 1497_wall-robot-navigation\n",
+      "Finished 1504_steel-plates-fault\n",
+      "Finished 1507_twonorm\n",
+      "Finished 1526_wall-robot-navigation\n",
+      "Finished 1535_volcanoes-b5\n",
+      "Finished 1538_volcanoes-d1\n",
+      "Finished 1539_volcanoes-d2\n",
+      "Finished 1540_volcanoes-d3\n",
+      "Finished 1541_volcanoes-d4\n",
+      "Finished 1566_hill-valley\n",
+      "Finished 182_satimage\n",
+      "Finished 23_cmc\n",
+      "Finished 28_optdigits\n",
+      "Finished 294_satellite_image\n",
+      "Finished 2dplanes\n",
+      "Finished 30_page-blocks\n",
+      "Finished 312_scene\n",
+      "Finished 375_JapaneseVowels\n",
+      "Finished 40474_thyroid-allbp\n",
+      "Finished 40475_thyroid-allhyper\n",
+      "Finished 40733_yeast\n",
+      "Finished 44_spambase\n",
+      "Finished 4538_GesturePhaseSegmentationProcessed\n",
+      "Finished 60_waveform-5000\n",
+      "Finished 679_rmftsa_sleepdata\n",
+      "Finished AedesQuinx\n",
+      "Finished AedesSex\n",
+      "Finished ArabicDigit\n",
+      "Finished BNG\n",
+      "Finished BNG_breast-w\n",
+      "Finished GAMETES_Epistasis_2-Way_20atts_0.1H_EDM-1_1\n",
+      "Finished GAMETES_Epistasis_2-Way_20atts_0.4H_EDM-1_1\n",
+      "Finished HTRU\n",
+      "Finished MagicTelescope\n",
+      "Finished abalone\n",
+      "Finished ailerons\n",
+      "Finished anuranCalls\n",
+      "Finished balloon\n",
+      "Finished bank8FM\n",
+      "Finished churn\n",
+      "Finished clean2\n",
+      "Finished click-prediction\n",
+      "Finished cmc\n",
+      "Finished covtype_reduced\n",
+      "Finished cpu_act\n",
+      "Finished default_credit_card_clients\n",
+      "Finished delta_ailerons\n",
+      "Finished eeg\n",
+      "Finished electricity-normalized\n",
+      "Finished elevators\n",
+      "Finished file22f0e4a679\n",
+      "Finished file79b563a1a18\n",
+      "Finished file7b5365fa741c\n",
+      "Finished fri_c2_1000_10\n",
+      "Finished fried\n",
+      "Finished gina_agnostic\n",
+      "Finished houses\n",
+      "Finished jm1-processed\n",
+      "Finished kdd_JapaneseVowels\n",
+      "Finished kin8nm\n",
+      "Finished letter-recognition\n",
+      "Finished magic\n",
+      "Finished mozilla\n",
+      "Finished namao\n",
+      "Finished occupancy\n",
+      "Finished page-blocks\n",
+      "Finished parity5_plus_5\n",
+      "Finished pendigits\n",
+      "Finished phoneme\n",
+      "Finished php50jXam\n",
+      "Finished phpGUrE90\n",
+      "Finished phpMD2hR6\n",
+      "Finished phpV5QYya\n",
+      "Finished phpWfYmlu\n",
+      "Finished phphQEck0\n",
+      "Finished phplE7q6h\n",
+      "Finished phpmPOD5A\n",
+      "Finished phpwRjVjk\n",
+      "Finished phpxijhaP\n",
+      "Finished pol\n",
+      "Finished pollen\n",
+      "Finished puma32H\n",
+      "Finished puma8NH\n",
+      "Finished quake\n",
+      "Finished space_ga\n",
+      "Finished spambase\n",
+      "Finished sylva_prior\n",
+      "Finished visualizing_soil\n",
+      "Finished wind\n",
+      "Finished winetype\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    from sklearn.ensemble import RandomForestRegressor\n",
@@ -387,10 +601,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "55072ec3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished 1043_ada_agnostic\n",
+      "Finished 1460_banana\n",
+      "Finished 1462_banknote-authentication\n",
+      "Finished 1466_cardiotocography\n",
+      "Finished 1475_first-order-theorem-proving\n",
+      "Finished 1479_hill-valley\n",
+      "Finished 1485_madelon\n",
+      "Finished 1489_phoneme\n",
+      "Finished 1494_qsar-biodeg\n",
+      "Finished 1496_ringnorm\n",
+      "Finished 1497_wall-robot-navigation\n",
+      "Finished 1504_steel-plates-fault\n",
+      "Finished 1507_twonorm\n",
+      "Finished 1526_wall-robot-navigation\n",
+      "Finished 1535_volcanoes-b5\n",
+      "Finished 1538_volcanoes-d1\n",
+      "Finished 1539_volcanoes-d2\n",
+      "Finished 1540_volcanoes-d3\n",
+      "Finished 1541_volcanoes-d4\n",
+      "Finished 1566_hill-valley\n",
+      "Finished 182_satimage\n",
+      "Finished 23_cmc\n",
+      "Finished 28_optdigits\n",
+      "Finished 294_satellite_image\n",
+      "Finished 2dplanes\n",
+      "Finished 30_page-blocks\n",
+      "Finished 312_scene\n",
+      "Finished 375_JapaneseVowels\n",
+      "Finished 40474_thyroid-allbp\n",
+      "Finished 40475_thyroid-allhyper\n",
+      "Finished 40733_yeast\n",
+      "Finished 44_spambase\n",
+      "Finished 4538_GesturePhaseSegmentationProcessed\n",
+      "Finished 60_waveform-5000\n",
+      "Finished 679_rmftsa_sleepdata\n",
+      "Finished AedesQuinx\n",
+      "Finished AedesSex\n",
+      "Finished ArabicDigit\n",
+      "Finished BNG\n",
+      "Finished BNG_breast-w\n",
+      "Finished GAMETES_Epistasis_2-Way_20atts_0.1H_EDM-1_1\n",
+      "Finished GAMETES_Epistasis_2-Way_20atts_0.4H_EDM-1_1\n",
+      "Finished HTRU\n",
+      "Finished MagicTelescope\n",
+      "Finished abalone\n",
+      "Finished ailerons\n",
+      "Finished anuranCalls\n",
+      "Finished balloon\n",
+      "Finished bank8FM\n",
+      "Finished churn\n",
+      "Finished clean2\n",
+      "Finished click-prediction\n",
+      "Finished cmc\n",
+      "Finished covtype_reduced\n",
+      "Finished cpu_act\n",
+      "Finished default_credit_card_clients\n",
+      "Finished delta_ailerons\n",
+      "Finished eeg\n",
+      "Finished electricity-normalized\n",
+      "Finished elevators\n",
+      "Finished file22f0e4a679\n",
+      "Finished file79b563a1a18\n",
+      "Finished file7b5365fa741c\n",
+      "Finished fri_c2_1000_10\n",
+      "Finished fried\n",
+      "Finished gina_agnostic\n",
+      "Finished houses\n",
+      "Finished jm1-processed\n",
+      "Finished kdd_JapaneseVowels\n",
+      "Finished kin8nm\n",
+      "Finished letter-recognition\n",
+      "Finished magic\n",
+      "Finished mozilla\n",
+      "Finished namao\n",
+      "Finished occupancy\n",
+      "Finished page-blocks\n",
+      "Finished parity5_plus_5\n",
+      "Finished pendigits\n",
+      "Finished phoneme\n",
+      "Finished php50jXam\n",
+      "Finished phpGUrE90\n",
+      "Finished phpMD2hR6\n",
+      "Finished phpV5QYya\n",
+      "Finished phpWfYmlu\n",
+      "Finished phphQEck0\n",
+      "Finished phplE7q6h\n",
+      "Finished phpmPOD5A\n",
+      "Finished phpwRjVjk\n",
+      "Finished phpxijhaP\n",
+      "Finished pol\n",
+      "Finished pollen\n",
+      "Finished puma32H\n",
+      "Finished puma8NH\n",
+      "Finished quake\n",
+      "Finished space_ga\n",
+      "Finished spambase\n",
+      "Finished sylva_prior\n",
+      "Finished visualizing_soil\n",
+      "Finished wind\n",
+      "Finished winetype\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    from xgboost import XGBRegressor\n",
@@ -415,10 +736,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "eda15ade",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished 1043_ada_agnostic\n",
+      "Finished 1460_banana\n",
+      "Finished 1462_banknote-authentication\n",
+      "Finished 1466_cardiotocography\n",
+      "Finished 1475_first-order-theorem-proving\n",
+      "Finished 1479_hill-valley\n",
+      "Finished 1485_madelon\n",
+      "Finished 1489_phoneme\n",
+      "Finished 1494_qsar-biodeg\n",
+      "Finished 1496_ringnorm\n",
+      "Finished 1497_wall-robot-navigation\n",
+      "Finished 1504_steel-plates-fault\n",
+      "Finished 1507_twonorm\n",
+      "Finished 1526_wall-robot-navigation\n",
+      "Finished 1535_volcanoes-b5\n",
+      "Finished 1538_volcanoes-d1\n",
+      "Finished 1539_volcanoes-d2\n",
+      "Finished 1540_volcanoes-d3\n",
+      "Finished 1541_volcanoes-d4\n",
+      "Finished 1566_hill-valley\n",
+      "Finished 182_satimage\n",
+      "Finished 23_cmc\n",
+      "Finished 28_optdigits\n",
+      "Finished 294_satellite_image\n",
+      "Finished 2dplanes\n",
+      "Finished 30_page-blocks\n",
+      "Finished 312_scene\n",
+      "Finished 375_JapaneseVowels\n",
+      "Finished 40474_thyroid-allbp\n",
+      "Finished 40475_thyroid-allhyper\n",
+      "Finished 40733_yeast\n",
+      "Finished 44_spambase\n",
+      "Finished 4538_GesturePhaseSegmentationProcessed\n",
+      "Finished 60_waveform-5000\n",
+      "Finished 679_rmftsa_sleepdata\n",
+      "Finished AedesQuinx\n",
+      "Finished AedesSex\n",
+      "Finished ArabicDigit\n",
+      "Finished BNG\n",
+      "Finished BNG_breast-w\n",
+      "Finished GAMETES_Epistasis_2-Way_20atts_0.1H_EDM-1_1\n",
+      "Finished GAMETES_Epistasis_2-Way_20atts_0.4H_EDM-1_1\n",
+      "Finished HTRU\n",
+      "Finished MagicTelescope\n",
+      "Finished abalone\n",
+      "Finished ailerons\n",
+      "Finished anuranCalls\n",
+      "Finished balloon\n",
+      "Finished bank8FM\n",
+      "Finished churn\n",
+      "Finished clean2\n",
+      "Finished click-prediction\n",
+      "Finished cmc\n",
+      "Finished covtype_reduced\n",
+      "Finished cpu_act\n",
+      "Finished default_credit_card_clients\n",
+      "Finished delta_ailerons\n",
+      "Finished eeg\n",
+      "Finished electricity-normalized\n",
+      "Finished elevators\n",
+      "Finished file22f0e4a679\n",
+      "Finished file79b563a1a18\n",
+      "Finished file7b5365fa741c\n",
+      "Finished fri_c2_1000_10\n",
+      "Finished fried\n",
+      "Finished gina_agnostic\n",
+      "Finished houses\n",
+      "Finished jm1-processed\n",
+      "Finished kdd_JapaneseVowels\n",
+      "Finished kin8nm\n",
+      "Finished letter-recognition\n",
+      "Finished magic\n",
+      "Finished mozilla\n",
+      "Finished namao\n",
+      "Finished occupancy\n",
+      "Finished page-blocks\n",
+      "Finished parity5_plus_5\n",
+      "Finished pendigits\n",
+      "Finished phoneme\n",
+      "Finished php50jXam\n",
+      "Finished phpGUrE90\n",
+      "Finished phpMD2hR6\n",
+      "Finished phpV5QYya\n",
+      "Finished phpWfYmlu\n",
+      "Finished phphQEck0\n",
+      "Finished phplE7q6h\n",
+      "Finished phpmPOD5A\n",
+      "Finished phpwRjVjk\n",
+      "Finished phpxijhaP\n",
+      "Finished pol\n",
+      "Finished pollen\n",
+      "Finished puma32H\n",
+      "Finished puma8NH\n",
+      "Finished quake\n",
+      "Finished space_ga\n",
+      "Finished spambase\n",
+      "Finished sylva_prior\n",
+      "Finished visualizing_soil\n",
+      "Finished wind\n",
+      "Finished winetype\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    from sklearn.svm import SVR\n",
@@ -443,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "ce7d0ccf",
    "metadata": {},
    "outputs": [],
